--- a/courses/courses.css
+++ b/courses/courses.css
@@ -29,3 +29,55 @@
 #search  i:hover {
     color: #004e87;
 }
+
+/* Courses container  */
+
+#courses-layout {
+    display: flex;
+    justify-content: center;
+    align-items:center;
+    flex-wrap: wrap;
+    margin: 30px;
+    padding:  15px;
+
+}
+
+#courses-layout .card{
+    display: flex ;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    padding:  25px;
+    border: 1px solid #004e87;
+    border-radius: 10px;
+    width: 260px;
+    height: 30vh;
+    overflow: auto;
+    text-decoration: none;
+    margin: 20px;
+    scrollbar-width: none;
+}
+
+#courses-layout .card:hover{
+    background-color: aliceblue;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
+}
+
+#courses-layout .card h4 {
+    text-align: center;
+    padding-bottom: 30px;
+    
+}
+
+#courses-layout .card p {
+    color: #004e87;
+    font-size: 14px;
+    font-weight: 600;
+}
+
+
+
+
+
+
+
