--- a/courses/courses.css
+++ b/courses/courses.css
@@ -37,8 +37,8 @@
     justify-content: center;
     align-items:center;
     flex-wrap: wrap;
-    margin: 30px;
     padding:  15px;
+    margin-bottom: 180px;
 
 }
 
