--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ h4 {
 #footer {
     display: flex;
     flex-direction: column;
-    padding: 0px 70px;
+    padding: 80px 50px 0px 0px;
 }
 
 #footer .columns {
