--- a/subscription/Login/login.css
+++ b/subscription/Login/login.css
@@ -3,6 +3,10 @@
     display: flex;
     flex-direction: row;
     height: 110vh;
+    box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.1);
+    margin: 50px 50px 100px 50px;
+
+
 
 }
 
