--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ h4 {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding: 15px;
+    padding: 5px  15px;
     background-color: #004e87;
     box-shadow:  0px 5px 5px rgba(0, 0, 0, 0.2);
     z-index: 999;
